WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102402
REGRESSION (Subpixel layout): Gray vertical lines appear when moving insertion point to right on Mac
https://bugs.webkit.org/show_bug.cgi?id=102402
Summary
REGRESSION (Subpixel layout): Gray vertical lines appear when moving insertio...
Kosei Moriyama
Reported
2012-11-15 09:19:51 PST
Created
attachment 174462
[details]
test case WIth attached html (test.html), focus the input text field and move cursor from left to right, gray vertical lines appear between characters. I've found this behavior following browsers: * WebKit Nightly (Version 6.0.2 (7536.26.17, 537+)) * Chrome Canary (Version 25.0.1325.0 canary) * Chrome Dev (Version 25.0.1323.1 dev) * Chrome Beta (Version 24.0.1312.14 beta) My OS version is OS X 10.7.5.
Attachments
test case
(447 bytes, text/html)
2012-11-15 09:19 PST
,
Kosei Moriyama
no flags
Details
screenshot of the behavior
(51.83 KB, image/png)
2012-11-15 09:21 PST
,
Kosei Moriyama
no flags
Details
Patch
(4.62 KB, patch)
2012-12-11 14:55 PST
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Patch
(4.63 KB, patch)
2012-12-12 15:34 PST
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kosei Moriyama
Comment 1
2012-11-15 09:21:24 PST
Created
attachment 174463
[details]
screenshot of the behavior
Alexey Proskuryakov
Comment 2
2012-11-16 12:42:00 PST
<
rdar://problem/12720748
>
Emil A Eklund
Comment 3
2012-11-16 13:09:30 PST
Thanks for the reports. Do you have any idea when this started failing (i.e. last know good version)?
Simon Fraser (smfr)
Comment 4
2012-11-16 13:11:19 PST
Probably started when we enabled subpixel on Mac.
Emil A Eklund
Comment 5
2012-11-16 13:12:50 PST
(In reply to
comment #4
)
> Probably started when we enabled subpixel on Mac.
You are probably right. One would think that we'd have noticed it being broken in chrome/mac though.
Simon Fraser (smfr)
Comment 6
2012-11-16 13:14:21 PST
Maybe some platform code differs.
Emil A Eklund
Comment 7
2012-11-16 13:21:48 PST
(In reply to
comment #6
)
> Maybe some platform code differs.
Could be, I'll try to track it down early next week.
Emil A Eklund
Comment 8
2012-12-11 14:55:38 PST
Created
attachment 178885
[details]
Patch
WebKit Review Bot
Comment 9
2012-12-11 16:17:58 PST
Comment on
attachment 178885
[details]
Patch
Attachment 178885
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/15275421
New failing tests: fast/repaint/delete-into-nested-block.html
Emil A Eklund
Comment 10
2012-12-12 15:34:10 PST
Created
attachment 179136
[details]
Patch
Emil A Eklund
Comment 11
2012-12-12 15:43:48 PST
Thanks Simon!
Emil A Eklund
Comment 12
2012-12-12 15:54:55 PST
Committed
r137529
: <
http://trac.webkit.org/changeset/137529
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug