REGRESSION (Subpixel layout): Gray vertical lines appear when moving insertion point to right on Mac https://bugs.webkit.org/show_bug.cgi?id=102402

Reviewed by Simon Fraser.

Source/WebCore:

Round paintOffset in CaretBase::paintCaret to ensure that caret is painted at an integer pixel boundary.

Test: fast/sub-pixel/input-caret-on-subpixel-bound.html

* editing/FrameSelection.cpp:
(WebCore::CaretBase::paintCaret): Round paintOffset to ensure it is on a pixel boundary.

LayoutTests:

Add test for caret painting in input field with a subpixel position and padding.

* fast/sub-pixel/input-caret-on-subpixel-bound-expected.html: Added.
* fast/sub-pixel/input-caret-on-subpixel-bound.html: Added.


Canonical link: https://commits.webkit.org/123083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137529 268f45cc-cd09-0410-ab3c-d52691b4dbfc